--- a/src/components/import-mrpack/import-mrpack.css
+++ b/src/components/import-mrpack/import-mrpack.css
@@ -75,7 +75,7 @@
   width: 100%;
   user-select: none;
   h3 {
-    margin: 0;
+    margin: 0 0 20px 0;
     font-weight: 500;
     font-size: 20px;
     line-height: 20px;
@@ -88,7 +88,7 @@
     text-align: center;
   }
   p {
-    margin-top: 20px;
+    margin: 0;
     color: lightgray;
     text-align: center;
   }
