--- a/src/components/manage-dialog/manage-dialog.css
+++ b/src/components/manage-dialog/manage-dialog.css
@@ -81,7 +81,8 @@
   padding: 20px;
   gap: 20px;
   width: calc(100% - 40px);
-  height: 100%;
+  height: calc(100% - 72px);
+  max-height: calc(100% - 72px);
 }
 
 .dd-modlist-nomods {
@@ -96,6 +97,7 @@
   background-color: black;
   border-radius: 12px;
   height: 100%;
+  max-height: 348px;
   width: 100%;
   user-select: none;
   h4 {
@@ -115,17 +117,6 @@
   padding: 0 10px;
   margin: 10px;
   margin-bottom: 20px;
-  &::-webkit-scrollbar {
-    width: 8px
-  }
-  &::-webkit-scrollbar-track {
-    background: #0e0e0e;
-    border-radius: 10px
-  }
-  &::-webkit-scrollbar-thumb {
-    background: white;
-    border-radius: 10px
-  }
 }
 
 .dd-modcard {
