--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ button {
   cursor: pointer;
 }
 
-:root, .m-modlist {
+:root, .m-modlist, .dd-modlist-mods {
   &::-webkit-scrollbar {
     width: 8px;
     height: 8px;
